static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Montserrat:wght@100;200;300;400;500;600&display=swap');
html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}

body {
    margin:0;
    padding:0;
    overflow-x: hidden;
    display: flex;
    background-color: rgba(27, 38, 59, .9);
}


main.container-flex {
    display: flex;
    flex-direction: column;
}

.page-container {
    display:flex;
    flex-direction: column;
    min-height: 100vh;
}

.title-container {
    display: flex;
    width: 100vw;
    position: relative;
    margin-bottom: 2rem;
}

.page-title {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 8rem;
    white-space: nowrap;
    margin: 0 auto;
    color: rgba(137, 166, 251);
}

.unstyled-button {
    display: flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
}

.button-confirm { 
    background-color: rgba(7, 156, 131, .8);
}

.button-cancel {
    background-color: rgba(206, 59, 103, .8);
    
}

h1,
h2,
h3,
h4,
h5,
h6,
.navbar-brand,
.copyright,
.nav-link {
    font-family: 'Montserrat', sans-serif;
}

p,
a {
    font-family: 'Libre Franklin', sans-serif;
    font-weight: 300;
}
.row {
    padding: 0;
}

/* FLASH STYLING */
.page-flash-container{
    position: fixed;
    left: 50%;
    top: 10%;
    transform: translate(-50%, -10%);
    z-index: 15;
    padding-left: 24rem;
}

.flash-message {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 40vw;
    background-color: #7697F9;
    font-size: 2.5rem;
    padding:1.5rem 4rem;
    text-align: center;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
}

.flash-close,
.flash-text {
    font-weight: 400;
    display: flex;
    padding: 0;
    margin: 0;
    color: #fff;
}

.flash-close {
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
    justify-content: center;
    align-items: center;
}

nav.navbar {
    position: fixed;
    top:0;
    background-color: #89A6FB;
    height: 6rem;
    padding: 0;
    max-width: 100vw;
    width: 100%;
    box-shadow: 0 3px rgba(0, 0, 0, .3);
    z-index: 10;
}

div.collapse.navbar-collapse {
    justify-content: flex-end;
}

.navbar a.navbar-brand {
    position: absolute;
    font-size: 3rem;
    color: #ffffff;
    margin-left: 1rem;
    border: none;
}

.navbar.navbar-expand-md button.navbar-toggler {
    position: absolute;
    right: 1rem;
    margin-right: 1rem;
    border: none;
    font-size: 2.2rem;
    color: #ffffff;
}

.navbar.navbar-expand-md button.navbar-toggler:active {
    font-size: 2.4rem;
}


.navbar.navbar-expand-md button.navbar-toggler:focus {
    box-shadow: none;
}

.navbar li.nav-item a.nav-link {
    padding: .5rem 1rem;
    font-size: 2rem;
    color: #ffffff;
    margin: 0 auto;
    width: 50%;
}

.navbar-nav {
    text-align: center;
    margin-top: 6rem;
    background-color: #89A6FB;
    box-shadow: 0 2px rgba(0, 0, 0, .3);
}


.navbar .nav-item .nav-link:hover,
.navbar .nav-item .nav-link:active,
.navbar .nav-item .nav-link:focus {
    background-color: white;
    color: #7697F9;
}

li.nav-item.active  a.nav-link {
    background-color: white;
    color: #7697F9;
}

header {
    display: flex;
    height: 6rem;
}

main {
    padding-top: 2rem;
    display: flex;
    flex-grow: 1;
}

.main-container {
    display: flex;
    flex-direction: column;
    position: relative;
    max-width: 90vw;
    margin-left: auto;
    margin-right: auto;
    height: 100%;
}

footer {
    display: flex;
    flex-direction: column;
    color: #89A6FB;
    font-size: 1.8rem;
    align-items: center;
}

.social-container, .copyright {
    display: flex;
}

.copyright {
    padding: 1rem;
    margin: 0;
}

.social-container i {
    font-size: 2.4rem;
    padding: 1rem;
    color: #89A6FB;
}

/* Post Styling */
.post-details {
    padding: 1rem 1rem;
    margin:0 auto;
    min-height: 25rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.filter-options {
    width:100%;
    height: auto;
    display: flex;
    background-color: #ffffff;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    flex-direction: column;
    margin-bottom: 4rem;
    margin-right: auto;
    margin-left: auto;
    justify-content: space-between;
}

.filter-control {
    display: flex;
    padding: 1rem;
    margin-top: auto;
    margin-bottom: auto;
    font-size: 1.6rem;
    color: #7697F9;
    font-family: 'Montserrat', sans-serif;
}

button.filter-control {
    background-color: rgba(7, 156, 131, .8);
    color: #ffffff;
    padding: 1rem;
    display: flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    justify-content: center;
    align-items: center;
}

#sort-by-dropdown,
#filter-dropdown  {
    border: 0;
    background-color: #ffffff;
    width: 18rem;
}
.filter-div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-left: .5rem;
    padding-right: .5rem;
}

.sidebar {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    width: 100%;
    padding: 0;
    height: 5.5rem;
    margin:0;
    max-width: 100%;
}

.post-card {
    background: none;
    display:flex;
    flex-direction: column;
    margin-left: auto;
    margin-right: auto;
    border: 1px;
    width: 80vw;
    min-height: 25rem;
    height: auto;
    margin-bottom: 5rem;
    padding: 0;
}

.post-title, .post-topic {
    font-size: 2.4rem;
}

.post-topic {
    margin: 0;
}

.post-text{
   overflow: hidden;
   position: relative;
   background: white;
   max-height: 12.5rem;
}
/* ... */

